improved operationHandlers